# openfsd-patch-for-es

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: c-cpp.yml
src/: EuroScopePlugIn.h  VATSIMAuthPatch.cpp  VATSIMAuthPatch.h  config.h  main.cpp
